add playlist and track service

--- a/config/development.env
+++ b/config/development.env
@@ -6,3 +6,9 @@ APP_NAME=Music API
 # Database config
 MONGODB_URI=mongodb://user:password@localhost:27017/musicdb
 
+# Minio config
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin
+MINIO_BUCKET=music-library
+MINIO_PORT=9000
+MINIO_ENDPOINT=localhost
