--- a/package.json
+++ b/package.json
@@ -26,15 +26,19 @@
     "@nestjs/mongoose": "^10.1.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^8.0.2",
+    "aws-sdk": "^2.1692.0",
+    "backblaze-b2": "^1.7.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "fluent-ffmpeg": "^2.1.3",
+    "get-audio-duration": "^4.0.1",
+    "minio": "^8.0.2",
     "mongoose": "^8.8.0",
     "multer": "^1.4.5-lts.1",
-    "music-metadata": "^10.5.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "uuid": "^11.0.2",
     "winston": "^3.16.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
