--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,7 +35,7 @@ services:
       - APP_PORT=3000
       - API_PREFIX=api/v1
       - APP_NAME=Music API
-      - MINIO_ENDPOINT=localhost
+      - MINIO_ENDPOINT=minio
       - MINIO_ACCESS_KEY=minioadmin
       - MINIO_SECRET_KEY=minioadmin
       - MINIO_BUCKET=music-library
